Prática criação de obj com Constructor<T>