@@ -1,5 +1,9 @@
 package br.com.alura.estudo.alurator;
 
+import java.lang.reflect.InvocationTargetException;
+
+import javax.management.RuntimeErrorException;
+
 import br.com.alura.estudo.controle.Controle;
 
 public class Alurator {
@@ -17,16 +21,24 @@ public class Alurator {
 
 		try {
 			Class<?> classFromName = Class.forName(pacotebase + nome);
-			Object obj = classFromName.newInstance();
+			Object obj = classFromName.getDeclaredConstructor().newInstance();
 
 			System.out.println(obj);
 			System.out.println(obj instanceof Controle);
 
 			return null;
 
-		} catch (ClassNotFoundException | InstantiationException | IllegalAccessException e) {
+		} catch (ClassNotFoundException 
+				| InstantiationException 
+				| IllegalAccessException 
+				| IllegalArgumentException 
+				| NoSuchMethodException 
+				| SecurityException e) {
 			e.printStackTrace();
 			throw new RuntimeException(e);
+		}catch(InvocationTargetException e){
+			e.printStackTrace();
+			throw new RuntimeException("Erro no construtor: "+ e.getTargetException());
 		}
 	}
 
